@@ -1,3 +1,4 @@
+* Show related record names for all windows
 * Allow to edit Many2One from tree view
 * Use translated values when exporting Reference and Selection fields
 
